template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_BuiltForTemplate_name": {
            "defaultValue": "BuiltForTemplate",
            "type": "String"
        },
        "networkInterfaces_builtfortemplate728_name": {
            "defaultValue": "builtfortemplate728",
            "type": "String"
        },
        "publicIPAddresses_BuiltForTemplate_ip_name": {
            "defaultValue": "BuiltForTemplate-ip",
            "type": "String"
        },
        "virtualNetworks_Built_for_Template_vnet_name": {
            "defaultValue": "Built-for-Template-vnet",
            "type": "String"
        },
        "storageAccounts_builtfortemplatediag466_name": {
            "defaultValue": "builtfortemplatediag466",
            "type": "String"
        },
        "networkSecurityGroups_BuiltForTemplate_nsg_name": {
            "defaultValue": "BuiltForTemplate-nsg",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "securityRules_default_allow_ssh_name": {
            "defaultValue": "default-allow-ssh",
            "type": "String"
        },
        "securityRules_Port_8080_name": {
            "defaultValue": "Port_8080",
            "type": "String"
        },
        "securityRules_Port_8443_name": {
            "defaultValue": "Port_8443",
            "type": "String"
        },
        "virtualMachines_BuiltForTemplate_id": {
            "defaultValue": "/subscriptions/0d5f333d-16e9-44d1-ae79-c28ea1d9cbcc/resourceGroups/Built-for-Template/providers/Microsoft.Compute/disks/BuiltForTemplate_OsDisk_1_d19b8dac446f44f788807f6e4aa77e0d",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/0d5f333d-16e9-44d1-ae79-c28ea1d9cbcc/resourceGroups/Built-for-Template/providers/Microsoft.Compute/virtualMachines/BuiltForTemplate'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_BuiltForTemplate_name')]",
            "apiVersion": "2017-03-30",
            "location": "centralus",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "17.10",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_BuiltForTemplate_name'),'_OsDisk_1_d19b8dac446f44f788807f6e4aa77e0d')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_BuiltForTemplate_name')]",
                    "adminUsername": "ubuntu_user1",
                    "adminPassword": "ubuntu_pass1",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_builtfortemplate728_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_builtfortemplatediag466_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_builtfortemplate728_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_builtfortemplatediag466_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0d5f333d-16e9-44d1-ae79-c28ea1d9cbcc/resourceGroups/Built-for-Template/providers/Microsoft.Network/networkInterfaces/builtfortemplate728'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_builtfortemplate728_name')]",
            "apiVersion": "2017-06-01",
            "location": "centralus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "6effc713-d612-4caf-b26f-957a1e936e00",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"7d718e7b-26d7-4339-880a-8f094bcc11b4\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_BuiltForTemplate_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Built_for_Template_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "li4razlfehwehi4lyec41gfplc.gx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-93-73-36",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_BuiltForTemplate_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_BuiltForTemplate_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_BuiltForTemplate_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Built_for_Template_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_BuiltForTemplate_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0d5f333d-16e9-44d1-ae79-c28ea1d9cbcc/resourceGroups/Built-for-Template/providers/Microsoft.Network/networkSecurityGroups/BuiltForTemplate-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_BuiltForTemplate_nsg_name')]",
            "apiVersion": "2017-06-01",
            "location": "centralus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "6bdd0f08-1501-41a9-810e-c04966e3f920",
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "etag": "W/\"2de45763-e2da-4487-b21a-720c2130706d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Port_8080",
                        "etag": "W/\"2de45763-e2da-4487-b21a-720c2130706d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []   
                        }
                    },
                    {
                        "name": "Port_8443",
                        "etag": "W/\"2de45763-e2da-4487-b21a-720c2130706d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []   
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"2de45763-e2da-4487-b21a-720c2130706d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"2de45763-e2da-4487-b21a-720c2130706d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"2de45763-e2da-4487-b21a-720c2130706d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"2de45763-e2da-4487-b21a-720c2130706d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"2de45763-e2da-4487-b21a-720c2130706d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"2de45763-e2da-4487-b21a-720c2130706d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0d5f333d-16e9-44d1-ae79-c28ea1d9cbcc/resourceGroups/Built-for-Template/providers/Microsoft.Network/publicIPAddresses/BuiltForTemplate-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_BuiltForTemplate_ip_name')]",
            "apiVersion": "2017-06-01",
            "location": "centralus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "5a71a27a-ef1c-4ceb-8f0f-7fe2967a7631",
                "ipAddress": "40.69.172.28",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "jenkins-template-test",
                    "fqdn": "jenkins-template-test.centralus.cloudapp.azure.com"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0d5f333d-16e9-44d1-ae79-c28ea1d9cbcc/resourceGroups/Built-for-Template/providers/Microsoft.Network/virtualNetworks/Built-for-Template-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_Built_for_Template_vnet_name')]",
            "apiVersion": "2017-06-01",
            "location": "centralus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "65103d5a-2165-43ec-a3cb-c105ed98af5a",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"5ae269e4-281d-4982-8ddb-73a0d0745b8c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0d5f333d-16e9-44d1-ae79-c28ea1d9cbcc/resourceGroups/built-for-template/providers/Microsoft.Storage/storageAccounts/builtfortemplatediag466'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_builtfortemplatediag466_name')]",
            "apiVersion": "2017-06-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "encryption": {
                    "keySource": "Microsoft.Storage",
                    "services": {
                        "blob": {
                            "enabled": true
                        },
                        "file": {
                            "enabled": true
                        }
                    }
                },
                "networkAcls": {
                    "bypass": "AzureServices",
                    "defaultAction": "Allow",
                    "ipRules": [],
                    "virtualNetworkRules": []
                },
                "supportsHttpsTrafficOnly": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0d5f333d-16e9-44d1-ae79-c28ea1d9cbcc/resourceGroups/Built-for-Template/providers/Microsoft.Network/networkSecurityGroups/BuiltForTemplate-nsg/securityRules/default-allow-ssh'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_BuiltForTemplate_nsg_name'), '/', parameters('securityRules_default_allow_ssh_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_BuiltForTemplate_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0d5f333d-16e9-44d1-ae79-c28ea1d9cbcc/resourceGroups/Built-for-Template/providers/Microsoft.Network/networkSecurityGroups/BuiltForTemplate-nsg/securityRules/Port_8080'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_BuiltForTemplate_nsg_name'), '/', parameters('securityRules_Port_8080_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "8080",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_BuiltForTemplate_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0d5f333d-16e9-44d1-ae79-c28ea1d9cbcc/resourceGroups/Built-for-Template/providers/Microsoft.Network/networkSecurityGroups/BuiltForTemplate-nsg/securityRules/Port_8443'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_BuiltForTemplate_nsg_name'), '/', parameters('securityRules_Port_8443_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "8443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 101,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_BuiltForTemplate_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0d5f333d-16e9-44d1-ae79-c28ea1d9cbcc/resourceGroups/Built-for-Template/providers/Microsoft.Network/virtualNetworks/Built-for-Template-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_Built_for_Template_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Built_for_Template_vnet_name'))]"
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('virtualMachines_BuiltForTemplate_name'),'/', 'DockerExtension')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "dependsOn": [
              "[concat('Microsoft.Compute/virtualMachines/', parameters('virtualMachines_BuiltForTemplate_name'))]"
            ],
            "properties": {
              "publisher": "Microsoft.Azure.Extensions",
              "type": "DockerExtension",
              "typeHandlerVersion": "1.0",
              "autoUpgradeMinorVersion": true,
              "settings": { }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('virtualMachines_BuiltForTemplate_name'),'/', 'CustomScript')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('virtualMachines_BuiltForTemplate_name'))]"
            ],
            "properties":{
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.0",
                "autoUpgradeMinorVersion": true,
              "settings": {
                "fileUris": [
                        "https://raw.githubusercontent.com/bsowin-pers/azure_jnkns/master/jenkins_install.sh"
                    ],
                "commandToExecute": "sudo sh jenkins_install.sh"
                }
            }
        }
    ]
}
